# phoebe2

./: .flake8  .gitattributes  .gitignore  .gitmodules  .travis.yaml  .travis.yml  AUTHORS  MANIFEST.in  NEWS  README  README.md  WD_CAVEATS  check_compiler.py  download.py  info.py  install.py  lcout.active  makedoc.py  pyproject.toml  setup.cfg  setup.py  svnauthors  vars_VS2017Community.bat
devel/phoebe-gui/: Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  phoebe-gui.cbp  phoebe-gui.desktop
devel/phoebe-gui/glade/: Makefile.am  Makefile.in  phoebe.glade  phoebe_about.glade  phoebe_cairo.glade  phoebe_lc_coefficients.glade  phoebe_lc_plot.glade  phoebe_ld_interpolator.glade  phoebe_levels.glade  phoebe_load_lc.glade  phoebe_load_rv.glade  phoebe_potential_calculator.glade  phoebe_settings.glade  phoebe_warning.glade  phoebe_weighting.glade
devel/phoebe-gui/pixmaps/: Makefile.am  Makefile.in
devel/phoebe-gui/src/: Makefile.am  Makefile.in  phoebe.glade  phoebe_filechooser.glade  phoebe_fitting.glade  phoebe_gui_accessories.c  phoebe_gui_accessories.h  phoebe_gui_base.c  phoebe_gui_base.h  phoebe_gui_build_config.h.in  phoebe_gui_callbacks.c  phoebe_gui_callbacks.h  phoebe_gui_error_handling.c  phoebe_gui_error_handling.h  phoebe_gui_global.h  phoebe_gui_interface.h  phoebe_gui_main.c  phoebe_gui_main.h  phoebe_gui_plotting.c  phoebe_gui_plotting.h  phoebe_gui_support.c  phoebe_gui_treeviews.c  phoebe_gui_treeviews.h  phoebe_gui_types.c  phoebe_gui_types.h  phoebe_load_lc.glade  phoebe_load_rv.glade  phoebe_settings.glade  version.h
devel/phoebe-lib/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  WD_CAVEATS  aclocal.m4  configure  configure.ac  phoebe-lib.cbp
devel/phoebe-lib/libphoebe/: Makefile.am  Makefile.in  phoebe.h  phoebe_accessories.c  phoebe_accessories.h  phoebe_allocations.c  (+44 more)
devel/phoebe-plugins/: aclocal.m4  configure.ac  phoebe_plugins_build_config.h.in
devel/phoebe-scripter/: Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac
phoebe-gui/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  phoebe-gui.cbp  phoebe-gui.mime  phoebe-gui.xml
phoebe-gui/glade/: Makefile.am  Makefile.in  phoebe.glade  phoebe_about.glade  phoebe_add_spots.glade  phoebe_cairo.glade  phoebe_cormat.glade  phoebe_import_bm3.glade  phoebe_lc_coefficients.glade  phoebe_lc_plot.glade  phoebe_ld_interpolator.glade  phoebe_levels.glade  phoebe_load_lc.glade  phoebe_load_rv.glade  phoebe_load_spots.glade  phoebe_potential_calculator.glade  phoebe_rv_plot.glade  phoebe_settings.glade  phoebe_third_light.glade  phoebe_weighting.glade
phoebe-gui/pixmaps/: Makefile.am  Makefile.in
phoebe-gui/src/: Makefile.am  Makefile.in  main.c  phoebe.glade  phoebe_filechooser.glade  phoebe_gui_accessories.c  phoebe_gui_accessories.h  phoebe_gui_base.c  phoebe_gui_base.h  phoebe_gui_build_config.h.in  phoebe_gui_callbacks.c  phoebe_gui_callbacks.h  phoebe_gui_error_handling.c  phoebe_gui_global.h  phoebe_gui_interface.c  phoebe_gui_main.c  phoebe_gui_main.h  phoebe_gui_plotting.c  phoebe_gui_plotting.h  phoebe_gui_treeviews.c  phoebe_gui_treeviews.h  phoebe_gui_types.c  phoebe_gui_types.h  phoebe_load_lc.glade  phoebe_settings.glade  version.h
phoebe-lib/: Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac  phoebe-lib.cbp
phoebe-lib/libphoebe/: Makefile.am  Makefile.in  phoebe.h  phoebe_accessories.c  phoebe_accessories.h  phoebe_allocations.c  phoebe_allocations.h  phoebe_base.c  phoebe_base.h  phoebe_build_config.h.in  phoebe_calculations.c  phoebe_calculations.h  phoebe_configuration.c  phoebe_configuration.h  phoebe_constraints.c  phoebe_constraints.grm.y  phoebe_constraints.h  phoebe_constraints.lex  phoebe_constraints.y  phoebe_data.c  phoebe_data.h  phoebe_driver.c  phoebe_driver.h  phoebe_error_handling.c  phoebe_error_handling.h  phoebe_fitting.c  phoebe_fitting.h  phoebe_fortran_interface.c  phoebe_fortran_interface.h  phoebe_ld.c  phoebe_legacy.c  phoebe_legacy.lex  phoebe_model.c  phoebe_model.h  phoebe_nms.c  phoebe_nms.h  phoebe_parameters.c  phoebe_parameters.h  phoebe_plotting.h  phoebe_radiation.c  (+7 more)
phoebe-lib/libwd/: ChangeLog.PHOEBE  Makefile.am  Makefile.in  atmx.f  dc.sub.f  fourls.f  lc.sub.f  light.f  lump.f  mlrg.f  modlog.f  olump.f  planckint.f  rddata.f  ring.f  surfas.f  wd.h  wrhead.f
phoebe-lib/ptf/: 2mass_ks.ptf  Makefile.am  Makefile.in  bessell_1988_h.txt  bolometric.ptf  corot.exo  corot.sis  geneva_1962_b.txt  geneva_1962_b1.txt  hipparcos_1989_bt.txt  hipparcos_1989_vt.txt  hst_foc_1989_f48_f150w.txt  hst_foc_1989_f48_f175w.txt  hst_foc_1989_f96_f152m.txt  hst_foc_1989_f96_f165w.txt  hst_foc_1989_f96_f175w.txt  hst_foc_1989_f96_f210m.txt  hst_foc_1989_f96_f220w.txt  hst_foc_1989_f96_f307m.txt  hst_foc_1989_f96_f342w.txt  hst_foc_1989_f96_f470m.txt  hst_foc_1989_f96_f486n.txt  hst_foc_1989_f96_f502m.txt  hst_foc_1989_f96_f550m.txt  johnson.B  johnson.N  johnson.V  johnson_u.ptf  sdss_r.txt  sdss_z.txt  sloan_g.ptf  stromgren_1956_b.txt  stromgren_u.ptf  walraven_b.ptf  walraven_u.ptf
phoebe-lib/wd/: Makefile.am  Makefile.in
phoebe-scripter/: Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
phoebe-scripter/help/: Makefile.am  Makefile.in  apply_doppler_shift.help  compute_critical_potentials.help  if.help  info.help  while.help
phoebe-scripter/m4/: ac_prog_xsltproc.m4
phoebe-scripter/src/: Makefile.am  Makefile.in  main.c  phoebe_scripter.lng.l  phoebe_scripter_arithmetics.c  phoebe_scripter_arithmetics.h  phoebe_scripter_ast.c  phoebe_scripter_ast.h  phoebe_scripter_build_config.h.in  phoebe_scripter_commands.c  phoebe_scripter_commands.h  phoebe_scripter_configuration.c  phoebe_scripter_configuration.h  phoebe_scripter_core.c  phoebe_scripter_core.h  phoebe_scripter_directives.c  phoebe_scripter_error_handling.c  phoebe_scripter_error_handling.h  phoebe_scripter_grammar.lex  phoebe_scripter_grammar.y  phoebe_scripter_io.c  phoebe_scripter_plotting.c  phoebe_scripter_plotting.h  phoebe_scripter_types.c  phoebe_scripter_types.h
(+2003 files in other folders)
